# edgar-funcs

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  cli.py  cloudbuild.yaml  edgar.py  func_helpers.py  main.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: copilot-instructions.md  python_build.yaml
edgar_funcs/: edgar.py
edgar_funcs/rag/: helper.py
edgar_funcs/rag/extract/: algo.py  fundmgr.py  llm.py  trustee.py
edgar_funcs/rag/vectorize/: __init__.py  chunking.py  embedding.py
notebooks/: compare_json_notebook.py  utils.py
rag/: __init__.py  algo.py  chunking.py  embedding.py  extraction.py  helper.py
rag/extract/: algo.py  fundmgr.py  llm.py  trustee.py
rag/vectorize/: __init__.py  chunking.py  embedding.py
scripts/: README.md  catalog.py  compare_response.py  extraction_result_schema.json  find_locks.py  req_topic.sh  result_topic.sh  setup.sh  trustee_comp_result_schema.json  zap.py
tests/: conftest.py  test_chunking.py  test_cli.py  test_edgar.py  test_embedding.py  test_extract_fundmgr.py  test_extract_trustee.py  test_extraction_result.py  test_firestore_util.py  test_llm.py  test_local_processing.py  test_main.py  test_rag.py  test_rag_chunking.py  test_rag_embedding.py  test_rag_extraction.py  test_result_message.py  test_update_response_mock.py  utils.py
tests/mockdata/chunking/4/1002427/: 0001133228-24-004879.json
tests/mockdata/cli/: filing_list.csv
tests/mockdata/embeddings/: trustee_comp_queries.json
tests/mockdata/embeddings/883622/: 0001137439-24-001242.json
tests/mockdata/response/gemini-1.5-flash-002/1002427/: 0001133228-24-004879_fundmgr_ownership.txt  0001133228-24-004879_trustee_comp.txt
tests/mockdata/response/gemini-1.5-flash-002/1201932/: 0000950136-04-001365.txt
(+18 files in other folders)
