[project]
name = "edgar-funcs"
version = "0.6.0"
description = "funtions for processing SEC filings on EDGAR site"
authors = [{ name = "Li Lin", email = "guru.lin@gmail.com" }]
readme = "README.md"

requires-python = ">= 3.12"
dependencies = [
    "python-dotenv >= 1.0.1",
    "beautifulsoup4>=4.12.3",
    "en-core-web-sm",
    "html2text>=2024.2.26",
    "requests>=2.32.3",
    "spacy>=3.8.3",
    "tenacity>=9.0.0",
    "google-cloud-logging>=3.11.4",
    "google-cloud-pubsub>=2.28.0",
    "google-cloud-aiplatform>=1.84.0",
    "tiktoken>=0.9.0",
    "openai>=1.66.3",
    "scipy>=1.15.2",
    "pandas>=2.2.3",
    "google-cloud-bigquery>=3.30.0",
    "rank-bm25>=0.2.2",
    "flask>=2.3.3",
    "cloudevents>=1.11.0",
]


[dependency-groups]
dev = [
    "pytest >= 8.3.0",
    "pytest-dotenv >= 0.5.2",
    "pytest-mock >= 3.14",
    "pytest-cov >= 6.0",
    "pytest-asyncio>=0.24.0",
    "pre-commit >= 4.0.1",
    "ruff >= 0.9.6",
    "pyright==1.1.399",
]

[tool.setuptools]
packages = [
    "edgar_funcs",
    "edgar_funcs.rag",
    "edgar_funcs.rag.extract",
    "edgar_funcs.rag.vectorize"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed = true

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }


[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
]

# see ruff configuration options at
# https://docs.astral.sh/ruff/configuration/

[tool.ruff]
line-length = 90
indent-width = 4
exclude = [".git", "__pycache__", "venv", ".venv"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C",
    "I",
    "A",
] # Enable checks for PEP8, imports, and other standard rules
ignore = ["E203", "E266"]
